Add support for macOS, tvOS, and visionOS platforms
Expanded platform support to include macOS, tvOS, and visionOS in podspec, nitro.json, and documentation. Updated README with detailed platform support table and notes. Enhanced package.json keywords for discoverability.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,13 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "macos",
+    "tvos",
+    "visionos",
+    "android",
+    "sf-symbols",
+    "icons",
+    "nitro-modules"
   ],
   "repository": {
     "type": "git",
