--- a/package.json
+++ b/package.json
@@ -125,6 +125,13 @@
     },
     "github": {
       "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": {
+          "name": "angular"
+        }
+      }
     }
   },
   "prettier": {
